--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ body {
 	--dark-mode-button-bg-hover: var(--accent1);
 	--dark-mode-button-color-hover: var(--bg);
 	--wpad-archive-bg: var(--accent1s1);
+	--wpad-archive: var(--fg);
 	--wpad-notice-bg: var(--accent1s1);
 	--wpcsp-speaker-gradient: linear-gradient(to bottom, var(--accent4s1) 0%,var(--accent4s1) 300px,var(--bg) 301px,var(--bg) 100%);
 	--wpcsp-organizer-gradient: linear-gradient(to bottom, var(--accent3s1) 0%,var(--accent3s1) 300px,var(--bg) 301px,var(--bg) 100%);
@@ -2375,6 +2376,10 @@ input[type="submit"]:hover,input[type="submit"]:focus,button:hover,button:focus,
 	padding:.25em;
 	margin: 0;
 	border-bottom: 2px solid;
+}
+
+#wpad-notice a {
+	color: var(--wpad-archive);
 }
 
 /* Media queries */
